data/paper_artifacts/deepseek_v4_pro_ohos10_0613_harness_fixed_v2/projects/core__ef5242b7ab08/.c2r_bindgen_extern/audio_parse_e2fe003d.externs.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub type size_t = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn strcmp(
        arg1: *const ::core::ffi::c_char,
        arg2: *const ::core::ffi::c_char,
    ) -> ::core::ffi::c_int;
}
pub const LOG_TYPE_MIN: LogType = 0;
pub const LOG_INIT: LogType = 1;
pub const LOG_CORE: LogType = 3;
pub const LOG_TYPE_MAX: LogType = 4;
pub type LogType = ::core::ffi::c_uint;
pub const LOG_DEBUG: LogLevel = 3;
pub const LOG_INFO: LogLevel = 4;
pub const LOG_WARN: LogLevel = 5;
pub const LOG_ERROR: LogLevel = 6;
pub const LOG_FATAL: LogLevel = 7;
pub type LogLevel = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn HiLogPrint(
        type_: LogType,
        level: LogLevel,
        domain: ::core::ffi::c_uint,
        tag: *const ::core::ffi::c_char,
        fmt: *const ::core::ffi::c_char,
        ...
    ) -> ::core::ffi::c_int;
}
pub const HDF_CONFIG_SOURCE: DeviceResourceType = 0;
pub const INVALID: DeviceResourceType = 1;
pub type DeviceResourceType = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DeviceResourceAttr {
    pub name: *const ::core::ffi::c_char,
    pub value: *const ::core::ffi::c_char,
    pub next: *mut DeviceResourceAttr,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DeviceResourceNode {
    pub name: *const ::core::ffi::c_char,
    pub hashValue: u32,
    pub attrData: *mut DeviceResourceAttr,
    pub parent: *mut DeviceResourceNode,
    pub child: *mut DeviceResourceNode,
    pub sibling: *mut DeviceResourceNode,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DeviceResourceIface {
    pub GetRootNode: ::core::option::Option<unsafe extern "C" fn() -> *const DeviceResourceNode>,
    pub GetBool: ::core::option::Option<
        unsafe extern "C" fn(
            node: *const DeviceResourceNode,
            attrName: *const ::core::ffi::c_char,
        ) -> bool,
    >,
    pub GetUint8: ::core::option::Option<
        unsafe extern "C" fn(
            node: *const DeviceResourceNode,
            attrName: *const ::core::ffi::c_char,
            value: *mut u8,
            def: u8,
        ) -> i32,
    >,
    pub GetUint8ArrayElem: ::core::option::Option<
        unsafe extern "C" fn(
            node: *const DeviceResourceNode,
            attrName: *const ::core::ffi::c_char,
            index: u32,
            value: *mut u8,
            def: u8,
        ) -> i32,
    >,
    pub GetUint8Array: ::core::option::Option<
        unsafe extern "C" fn(
            node: *const DeviceResourceNode,
            attrName: *const ::core::ffi::c_char,
            value: *mut u8,
            len: u32,
            def: u8,
        ) -> i32,
    >,
    pub GetUint16: ::core::option::Option<
        unsafe extern "C" fn(
            node: *const DeviceResourceNode,
            attrName: *const ::core::ffi::c_char,
            value: *mut u16,
            def: u16,
        ) -> i32,
    >,
    pub GetUint16ArrayElem: ::core::option::Option<
        unsafe extern "C" fn(
            node: *const DeviceResourceNode,
            attrName: *const ::core::ffi::c_char,
            index: u32,
            value: *mut u16,
            def: u16,
        ) -> i32,
    >,
    pub GetUint16Array: ::core::option::Option<
        unsafe extern "C" fn(
            node: *const DeviceResourceNode,
            attrName: *const ::core::ffi::c_char,
            value: *mut u16,
            len: u32,
            def: u16,
        ) -> i32,
    >,
    pub GetUint32: ::core::option::Option<
        unsafe extern "C" fn(
            node: *const DeviceResourceNode,
            attrName: *const ::core::ffi::c_char,
            value: *mut u32,
            def: u32,
        ) -> i32,
    >,
    pub GetUint32ArrayElem: ::core::option::Option<
        unsafe extern "C" fn(
            node: *const DeviceResourceNode,
            attrName: *const ::core::ffi::c_char,
            index: u32,
            value: *mut u32,
            def: u32,
        ) -> i32,
    >,
    pub GetUint32Array: ::core::option::Option<
        unsafe extern "C" fn(
            node: *const DeviceResourceNode,
            attrName: *const ::core::ffi::c_char,
            value: *mut u32,
            len: u32,
            def: u32,
        ) -> i32,
    >,
    pub GetUint64: ::core::option::Option<
        unsafe extern "C" fn(
            node: *const DeviceResourceNode,
            attrName: *const ::core::ffi::c_char,
            value: *mut u64,
            def: u64,
        ) -> i32,
    >,
    pub GetUint64ArrayElem: ::core::option::Option<
        unsafe extern "C" fn(
            node: *const DeviceResourceNode,
            attrName: *const ::core::ffi::c_char,
            index: u32,
            value: *mut u64,
            def: u64,
        ) -> i32,
    >,
    pub GetUint64Array: ::core::option::Option<
        unsafe extern "C" fn(
            node: *const DeviceResourceNode,
            attrName: *const ::core::ffi::c_char,
            value: *mut u64,
            len: u32,
            def: u64,
        ) -> i32,
    >,
    pub GetString: ::core::option::Option<
        unsafe extern "C" fn(
            node: *const DeviceResourceNode,
            attrName: *const ::core::ffi::c_char,
            value: *mut *const ::core::ffi::c_char,
            def: *const ::core::ffi::c_char,
        ) -> i32,
    >,
    pub GetStringArrayElem: ::core::option::Option<
        unsafe extern "C" fn(
            node: *const DeviceResourceNode,
            attrName: *const ::core::ffi::c_char,
            index: u32,
            value: *mut *const ::core::ffi::c_char,
            def: *const ::core::ffi::c_char,
        ) -> i32,
    >,
    pub GetElemNum: ::core::option::Option<
        unsafe extern "C" fn(
            node: *const DeviceResourceNode,
            attrName: *const ::core::ffi::c_char,
        ) -> i32,
    >,
    pub GetNodeByMatchAttr: ::core::option::Option<
        unsafe extern "C" fn(
            node: *const DeviceResourceNode,
            attrValue: *const ::core::ffi::c_char,
        ) -> *const DeviceResourceNode,
    >,
    pub GetChildNode: ::core::option::Option<
        unsafe extern "C" fn(
            node: *const DeviceResourceNode,
            nodeName: *const ::core::ffi::c_char,
        ) -> *const DeviceResourceNode,
    >,
    pub GetNodeByRefAttr: ::core::option::Option<
        unsafe extern "C" fn(
            node: *const DeviceResourceNode,
            attrName: *const ::core::ffi::c_char,
        ) -> *const DeviceResourceNode,
    >,
}
unsafe extern "C" {
    pub fn DeviceResourceGetIfaceInstance(type_: DeviceResourceType) -> *mut DeviceResourceIface;
}
unsafe extern "C" {
    pub fn OsalMemCalloc(size: size_t) -> *mut ::core::ffi::c_void;
}
unsafe extern "C" {
    pub fn OsalMemFree(mem: *mut ::core::ffi::c_void);
}
pub type errno_t = ::core::ffi::c_int;
unsafe extern "C" {
    pub fn memset_s(
        dest: *mut ::core::ffi::c_void,
        destMax: size_t,
        c: ::core::ffi::c_int,
        count: size_t,
    ) -> errno_t;
}
unsafe extern "C" {
    pub fn memcpy_s(
        dest: *mut ::core::ffi::c_void,
        destMax: size_t,
        src: *const ::core::ffi::c_void,
        count: size_t,
    ) -> errno_t;
}
